--- a/index.html
+++ b/index.html
@@ -53,6 +53,9 @@
                             <li><a href="services/finance-investment.html">Access to Finance</a></li>
                             <li><a href="services/market-access.html">Market Access</a></li>
                             <li><a href="services/capacity-building.html">Capacity Building</a></li>
+                            <li><a href="services/organizational-development.html">Org. Development</a></li>
+                            <li><a href="services/program-design.html">Program Design</a></li>
+                            <li><a href="services/vsla-training.html">VSLA Training</a></li>
                         </ul>
                     </li>
                     <li><a href="insights.html">Insights</a></li>
