--- a/insights.html
+++ b/insights.html
@@ -40,6 +40,9 @@
                             <li><a href="services/finance-investment.html">Access to Finance</a></li>
                             <li><a href="services/market-access.html">Market Access</a></li>
                             <li><a href="services/capacity-building.html">Capacity Building</a></li>
+                            <li><a href="services/organizational-development.html">Org. Development</a></li>
+                            <li><a href="services/program-design.html">Program Design</a></li>
+                            <li><a href="services/vsla-training.html">VSLA Training</a></li>
                         </ul>
                     </li>
                     <li><a href="insights.html" class="active">Insights</a></li>
@@ -64,66 +67,115 @@
     </section>
 
     <!-- Insights Grid -->
-    <section class="insights-section">
+    <section class="insights">
         <div class="container">
             <div class="insights-grid">
+
                 <!-- Article 1 -->
-                <div class="insight-card">
+                <article class="insight-card">
                     <div class="insight-image"
-                        style="background-image: url('https://images.unsplash.com/photo-1554224155-8d04cb21cd6c?auto=format&fit=crop&q=80&w=600'); background-size: cover; height: 200px;">
+                        style="background-image: url('https://images.unsplash.com/photo-1542744173-8e7e53415bb0?auto=format&fit=crop&q=80&w=1600');">
                     </div>
                     <div class="insight-content">
-                        <span class="insight-date">November 12, 2025</span>
-                        <h3>De-risking Investment in East Africa</h3>
-                        <p>Strategies for catalyzing capital flow into emerging markets through innovative financial
-                            instruments...</p>
-                        <a href="insights/derisking.html" class="read-more">Read Article <i
+                        <span class="insight-tag">Enterprise Growth</span>
+                        <h3><a href="insights/enterprise-growth-strategies.html">Unlocking Enterprise Growth in Emerging
+                                Markets</a></h3>
+                        <p>Strategies for scaling SMEs in East Africa by tackling operational inefficiencies and market
+                            barriers.</p>
+                        <a href="insights/enterprise-growth-strategies.html" class="read-more">Read Article <i
                                 class="fa-solid fa-arrow-right"></i></a>
                     </div>
-                </div>
+                </article>
 
                 <!-- Article 2 -->
-                <div class="insight-card">
+                <article class="insight-card">
                     <div class="insight-image"
-                        style="background-image: url('https://images.unsplash.com/photo-1581091226825-a6a2a5aee158?auto=format&fit=crop&q=80&w=600'); background-size: cover; height: 200px;">
+                        style="background-image: url('https://images.unsplash.com/photo-1579532537598-459ecdaf39cc?auto=format&fit=crop&q=80&w=1600');">
                     </div>
                     <div class="insight-content">
-                        <span class="insight-date">October 24, 2025</span>
-                        <h3>The Future of TVET in Africa</h3>
-                        <p>How Competency-Based Education and Training (CBET) is transforming youth employment...</p>
-                        <a href="insights/tvet-youth.html" class="read-more">Read Article <i
+                        <span class="insight-tag">Finance</span>
+                        <h3><a href="insights/investment-readiness.html">Investment Readiness: Bridging the Capital
+                                Gap</a></h3>
+                        <p>Why promising African businesses fail to secure funding and how to fix it through financial
+                            hygiene.</p>
+                        <a href="insights/investment-readiness.html" class="read-more">Read Article <i
                                 class="fa-solid fa-arrow-right"></i></a>
                     </div>
-                </div>
+                </article>
 
                 <!-- Article 3 -->
-                <div class="insight-card">
+                <article class="insight-card">
                     <div class="insight-image"
-                        style="background-image: url('https://images.unsplash.com/photo-1486406146926-c627a92ad1ab?auto=format&fit=crop&q=80&w=600'); background-size: cover; height: 200px;">
+                        style="background-image: url('https://images.unsplash.com/photo-1595839045421-4b104c86a244?auto=format&fit=crop&q=80&w=1600');">
                     </div>
                     <div class="insight-content">
-                        <span class="insight-date">January 15, 2026</span>
-                        <h3>Building Resilient Market Systems</h3>
-                        <p>Systemic interventions that create markets capable of withstanding global economic shocks...
-                        </p>
-                        <a href="insights/resilient-systems.html" class="read-more">Read Article <i
+                        <span class="insight-tag">Market Access</span>
+                        <h3><a href="insights/value-chain-development.html">Value Chains: From Production to Market</a>
+                        </h3>
+                        <p>Analyzing weak links in agricultural and industrial value chains to unlock value for
+                            producers.</p>
+                        <a href="insights/value-chain-development.html" class="read-more">Read Article <i
                                 class="fa-solid fa-arrow-right"></i></a>
                     </div>
-                </div>
+                </article>
 
-                <!-- Article 4 (Placeholder) -->
-                <div class="insight-card">
+                <!-- Article 4 -->
+                <article class="insight-card">
                     <div class="insight-image"
-                        style="background-image: url('https://images.unsplash.com/photo-1579532537598-459ecdaf39cc?auto=format&fit=crop&q=80&w=600'); background-size: cover; height: 200px;">
+                        style="background-image: url('https://images.unsplash.com/photo-1531545514256-b1400bc00f31?auto=format&fit=crop&q=80&w=1600');">
                     </div>
                     <div class="insight-content">
-                        <span class="insight-date">September 05, 2025</span>
-                        <h3>Entrepreneurial Skills & SME Performance</h3>
-                        <p>Analyzing the correlation between soft skills training and revenue growth in women-led
-                            SMEs...</p>
-                        <a href="#" class="read-more">Read Article <i class="fa-solid fa-arrow-right"></i></a>
+                        <span class="insight-tag">Capacity Building</span>
+                        <h3><a href="insights/entrepreneurial-mindset.html">The Entrepreneurial Mindset</a></h3>
+                        <p>Why soft skills and adaptability are as critical as technical training for long-term business
+                            survival.</p>
+                        <a href="insights/entrepreneurial-mindset.html" class="read-more">Read Article <i
+                                class="fa-solid fa-arrow-right"></i></a>
                     </div>
-                </div>
+                </article>
+
+                <!-- Article 5 -->
+                <article class="insight-card">
+                    <div class="insight-image"
+                        style="background-image: url('https://images.unsplash.com/photo-1522071820081-009f0129c71c?auto=format&fit=crop&q=80&w=1600');">
+                    </div>
+                    <div class="insight-content">
+                        <span class="insight-tag">Org Development</span>
+                        <h3><a href="insights/organizational-resilience.html">Building Resilient Organizations</a></h3>
+                        <p>Transitioning from personality-driven leadership to systems-driven operations for scale.</p>
+                        <a href="insights/organizational-resilience.html" class="read-more">Read Article <i
+                                class="fa-solid fa-arrow-right"></i></a>
+                    </div>
+                </article>
+
+                <!-- Article 6 -->
+                <article class="insight-card">
+                    <div class="insight-image"
+                        style="background-image: url('https://images.unsplash.com/photo-1551288049-bebda4e38f71?auto=format&fit=crop&q=80&w=1600');">
+                    </div>
+                    <div class="insight-content">
+                        <span class="insight-tag">Program Design</span>
+                        <h3><a href="insights/program-design-best-practices.html">Designing for Impact</a></h3>
+                        <p>Moving beyond rigid logframes to adaptive, data-driven program management.</p>
+                        <a href="insights/program-design-best-practices.html" class="read-more">Read Article <i
+                                class="fa-solid fa-arrow-right"></i></a>
+                    </div>
+                </article>
+
+                <!-- Article 7 -->
+                <article class="insight-card">
+                    <div class="insight-image"
+                        style="background-image: url('https://images.unsplash.com/photo-1542601906990-b4d3fb778b09?auto=format&fit=crop&q=80&w=1600');">
+                    </div>
+                    <div class="insight-content">
+                        <span class="insight-tag">VSLA Impact</span>
+                        <h3><a href="insights/vsla-impact.html">The Power of VSLAs</a></h3>
+                        <p>How Community-based savings groups build financial resilience and social capital.</p>
+                        <a href="insights/vsla-impact.html" class="read-more">Read Article <i
+                                class="fa-solid fa-arrow-right"></i></a>
+                    </div>
+                </article>
+
             </div>
         </div>
     </section>
