--- a/services.html
+++ b/services.html
@@ -40,6 +40,9 @@
                             <li><a href="services/finance-investment.html">Access to Finance</a></li>
                             <li><a href="services/market-access.html">Market Access</a></li>
                             <li><a href="services/capacity-building.html">Capacity Building</a></li>
+                            <li><a href="services/organizational-development.html">Org. Development</a></li>
+                            <li><a href="services/program-design.html">Program Design</a></li>
+                            <li><a href="services/vsla-training.html">VSLA Training</a></li>
                         </ul>
                     </li>
                     <li><a href="insights.html">Insights</a></li>
@@ -64,88 +67,108 @@
     </section>
 
     <!-- Services Content -->
+    <!-- Services Content -->
     <div class="services-content">
-        <!-- Private Sector Engagement -->
-        <section id="pse" class="service-detail">
+        <!-- 1. Enterprise Growth -->
+        <section id="enterprise-growth" class="service-detail">
             <div class="container">
                 <div class="service-grid">
                     <div class="service-text">
-                        <div class="service-icon"><i class="fa-solid fa-handshake-simple"></i></div>
-                        <h2>Private Sector Engagement</h2>
-                        <p>We facilitate transformative partnerships between development agencies, governments, and the
-                            private sector. Our approach ensures that market forces are leveraged to achieve sustainable
-                            development goals.</p>
-                        <h3>Key Capabilities:</h3>
-                        <ul class="check-list">
-                            <li>Public-Private Partnership (PPP) Structuring</li>
-                            <li>Corporate Social Responsibility (CSR) Strategy alignment</li>
-                            <li>Resource Mobilization & Co-Investment Models</li>
-                            <li>Stakeholder Mapping & Engagement Strategy</li>
-                        </ul>
+                        <div class="service-icon"><i class="fa-solid fa-chart-line"></i></div>
+                        <h2>Enterprise Growth & SME Development</h2>
+                        <p>We provide strategic advisory and operational support to scale Small and Medium Enterprises
+                            (SMEs), turning them into drivers of economic stability.</p>
+                        <a href="services/enterprise-growth.html" class="btn btn-outline">Learn More</a>
                     </div>
                 </div>
             </div>
         </section>
 
-        <!-- Financial Inclusion -->
-        <section id="financial-inclusion" class="service-detail bg-off-white">
+        <!-- 2. Access to Finance -->
+        <section id="finance-investment" class="service-detail bg-off-white">
             <div class="container">
                 <div class="service-grid">
                     <div class="service-text">
                         <div class="service-icon"><i class="fa-solid fa-coins"></i></div>
-                        <h2>Inclusive Financial Systems</h2>
-                        <p>Access to finance is a critical driver of growth. We design inclusive financial ecosystems
-                            that cater to MSMEs, women, youth, and other underserved populations.</p>
-                        <h3>Key Capabilities:</h3>
-                        <ul class="check-list">
-                            <li>Human-Centered Product Design for Fintech</li>
-                            <li>Financial Literacy & Capability Training Programs</li>
-                            <li>Risk Sharing Facility Design</li>
-                            <li>Digital Financial Services (DFS) Adoption Strategy</li>
-                        </ul>
+                        <h2>Access to Finance & Investment Readiness</h2>
+                        <p>Helping businesses and institutions structure financial products, manage risk, and attract
+                            investment capital.</p>
+                        <a href="services/finance-investment.html" class="btn btn-outline">Learn More</a>
                     </div>
                 </div>
             </div>
         </section>
 
-        <!-- TVET -->
-        <section id="tvet" class="service-detail">
-            <div class="container">
-                <div class="service-grid">
-                    <div class="service-text">
-                        <div class="service-icon"><i class="fa-solid fa-chalkboard-user"></i></div>
-                        <h2>Workforce Development (TVET)</h2>
-                        <p>Bridging the skills gap is essential for economic productivity. We reform TVET systems to be
-                            demand-driven, ensuring graduates have the skills employers actually need.</p>
-                        <h3>Key Capabilities:</h3>
-                        <ul class="check-list">
-                            <li>Competency-Based Education and Training (CBET) Curriculum Design</li>
-                            <li>Industry Advisory Board Establishment</li>
-                            <li>Apprenticeship & Internship Management Systems</li>
-                            <li>Training of Trainers (ToT)</li>
-                        </ul>
-                    </div>
-                </div>
-            </div>
-        </section>
-
-        <!-- Market Systems -->
-        <section id="market-systems" class="service-detail bg-off-white">
+        <!-- 3. Market Access -->
+        <section id="market-access" class="service-detail">
             <div class="container">
                 <div class="service-grid">
                     <div class="service-text">
                         <div class="service-icon"><i class="fa-solid fa-globe"></i></div>
-                        <h2>Market Systems Development</h2>
-                        <p>We analyze and strengthen entire value chains to improve resilience and competitiveness. Our
-                            systemic approach identifies root causes of market failures and addresses them sustainably.
-                        </p>
-                        <h3>Key Capabilities:</h3>
-                        <ul class="check-list">
-                            <li>Value Chain Analysis & Upgrading Strategies</li>
-                            <li>Market Access & Trade Facilitation</li>
-                            <li>Business Continuity Planning for MSMEs</li>
-                            <li>Inclusive Business Model Innovation</li>
-                        </ul>
+                        <h2>Market Access & Value Chain Development</h2>
+                        <p>Connecting producers to profitable markets by analyzing value chains and removing systemic
+                            barriers to trade.</p>
+                        <a href="services/market-access.html" class="btn btn-outline">Learn More</a>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <!-- 4. Capacity Building -->
+        <section id="capacity-building" class="service-detail bg-off-white">
+            <div class="container">
+                <div class="service-grid">
+                    <div class="service-text">
+                        <div class="service-icon"><i class="fa-solid fa-chalkboard-user"></i></div>
+                        <h2>Capacity Building & Entrepreneurship Training</h2>
+                        <p>Equipping individuals and organizations with the skills needed to innovate, manage, and grow
+                            successful ventures.</p>
+                        <a href="services/capacity-building.html" class="btn btn-outline">Learn More</a>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <!-- 5. Org Development -->
+        <section id="organizational-development" class="service-detail">
+            <div class="container">
+                <div class="service-grid">
+                    <div class="service-text">
+                        <div class="service-icon"><i class="fa-solid fa-sitemap"></i></div>
+                        <h2>Organisational & Human Capital Development</h2>
+                        <p>Optimizing organizational structures and developing human talent to improve efficiency and
+                            performance.</p>
+                        <a href="services/organizational-development.html" class="btn btn-outline">Learn More</a>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <!-- 6. Program Design -->
+        <section id="program-design" class="service-detail bg-off-white">
+            <div class="container">
+                <div class="service-grid">
+                    <div class="service-text">
+                        <div class="service-icon"><i class="fa-solid fa-pen-ruler"></i></div>
+                        <h2>Program Design, Delivery & Advisory Services</h2>
+                        <p>End-to-end management of development programs, from initial concept and design to
+                            implementation and evaluation.</p>
+                        <a href="services/program-design.html" class="btn btn-outline">Learn More</a>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <!-- 7. VSLA Training -->
+        <section id="vsla-training" class="service-detail">
+            <div class="container">
+                <div class="service-grid">
+                    <div class="service-text">
+                        <div class="service-icon"><i class="fa-solid fa-users"></i></div>
+                        <h2>VSLA Training & Capacity Building</h2>
+                        <p>Strengthening community-based financial groups through governance training, financial
+                            literacy, and digital integration.</p>
+                        <a href="services/vsla-training.html" class="btn btn-outline">Learn More</a>
                     </div>
                 </div>
             </div>
