--- a/services/vsla-training.html
+++ b/services/vsla-training.html
@@ -6,9 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <!-- SEO Meta Tags -->
-    <title>Financial Inclusion | KB & Associates</title>
+    <title>VSLA Training & Capacity Building | KB & Associates</title>
     <meta name="description"
-        content="KB & Associates designs inclusive financial systems that expand access to capital for MSMEs and under-served populations.">
+        content="Empowering communities through Village Savings and Loan Associations (VSLA) training and financial literacy programs.">
 
     <!-- Styles -->
     <link rel="stylesheet" href="../styles.css?v=3">
@@ -28,7 +28,8 @@
     <!-- Header -->
     <header class="header">
         <div class="container">
-            <a href="../index.html" class="logo"><img src="../images/logo.jpg" alt="KB & Associates" style="height: 60px;"></a>
+            <a href="../index.html" class="logo"><img src="../images/logo.jpg" alt="KB & Associates"
+                    style="height: 60px;"></a>
             <nav class="navbar">
                 <ul class="nav-links">
                     <li><a href="../index.html#about">About Firm</a></li>
@@ -60,8 +61,8 @@
     <!-- Page Header -->
     <section class="page-header">
         <div class="container">
-            <h1>Access to Finance & Investment Readiness</h1>
-            <p>Unlocking capital for growth through robust financial strategies.</p>
+            <h1>VSLA Training & Capacity Building</h1>
+            <p>Building financial resilience at the community level.</p>
         </div>
     </section>
 
@@ -70,7 +71,7 @@
         <div class="container">
             <a href="../index.html">Home</a> <span>/</span>
             <a href="../services.html">Services</a> <span>/</span>
-            <span class="breadcrumb-current">Access to Finance</span>
+            <span class="breadcrumb-current">VSLA Training</span>
         </div>
     </div>
 
@@ -78,34 +79,32 @@
     <main class="page-layout container">
         <!-- Center Content -->
         <article class="page-content">
-            <h2 style="margin-top: 0;">Access to Capital is a Right, Not a Privilege</h2>
-            <p>Financial inclusion is the bedrock of economic resilience. Our team works with financial institutions,
-                governments, and NGOs to design products and regulatory frameworks that reach the unbanked and
-                under-served.</p>
+            <h2 style="margin-top: 0;">Community-Led Financial Empowerment</h2>
+            <p>Village Savings and Loan Associations (VSLAs) form the backbone of financial resilience in many rural and
+                peri-urban communities. KB & Associates provides comprehensive training and capacity building to
+                strengthen these groups, ensuring longevity and financial growth.</p>
 
-            <p>From mobile money integration to micro-insurance schemes, we deploy solutions that are scalable,
-                sustainable, and tailored to local contexts.</p>
+            <p>Our approach goes beyond basic savings. We integrate financial literacy, business skills, and digital
+                tools to transform VSLAs into powerful engines for local economic development.</p>
 
-            <h3>Key Offerings</h3>
+            <h3>Our Solutions</h3>
             <ul>
-                <li><strong>Product Design & Piloting:</strong> Creating customer-centric financial products for MSMEs,
-                    women, and youth.</li>
-                <li><strong>Financial Literacy Programs:</strong> Educating beneficiaries to make informed financial
-                    decisions and manage debt responsibly.</li>
-                <li><strong>Risk Mitigation:</strong> Developing credit scoring models and guarantee funds to de-risk
-                    lending to vulnerable sectors.</li>
-                <li><strong>Digital Transformation:</strong> Leveraging fintech to lower transaction costs and increase
-                    reach.</li>
+                <li><strong>VSLA Formation & Governance:</strong> Establishing clear bylaws, leadership structures, and
+                    operational guidelines.</li>
+                <li><strong>Financial Literacy Training:</strong> Educating members on budgeting, debt management, and
+                    investment strategies.</li>
+                <li><strong>Digital Calculation & Record Keeping:</strong> Introducing digital tools to improve
+                    transparency and tracking.</li>
+                <li><strong>Linkages to Formal Finance:</strong> Preparing mature VSLAs to access credit from formal
+                    financial institutions.</li>
             </ul>
 
-            <div style="background: #f8f9fa; padding: 2rem; border-left: 4px solid #00838F; margin: 2rem 0;">
-                <h4 style="margin-top: 0; color: #4F2D7F;">Case Study: Empowering Women Entrepreneurs</h4>
-                <p style="margin-bottom: 0;">We helped design a credit facility that unlocked over $2M in financing for
-                    women-led SMEs in rural Kenya, resulting in a 30% increase in household incomes.</p>
-            </div>
+            <img src="https://images.unsplash.com/photo-1531206715517-5c0ba140b2b8?auto=format&fit=crop&q=80&w=1600"
+                alt="Community Group" style="border-radius: 8px; margin: 2rem 0; width: 100%;">
 
-            <p>Our work aligns with the UN Sustainable Development Goals (SDGs), specifically Goal 1 (No Poverty) and
-                Goal 8 (Decent Work and Economic Growth).</p>
+            <h3>Impact</h3>
+            <p>By strengthening VSLAs, we enable households to smooth consumption, invest in education and health, and
+                start micro-enterprises that uplift entire communities.</p>
         </article>
 
         <!-- Sidebar -->
@@ -128,9 +127,11 @@
             <div class="sidebar-widget">
                 <h3>Related Services</h3>
                 <ul class="sidebar-links">
-                    <li><a href="pse.html">Private Sector Engagement <i class="fa-solid fa-arrow-right"></i></a></li>
-                    <li><a href="tvet.html">Workforce Development <i class="fa-solid fa-arrow-right"></i></a></li>
-                    <li><a href="market-systems.html">Market Systems <i class="fa-solid fa-arrow-right"></i></a></li>
+                    <li><a href="finance-investment.html">Access to Finance <i class="fa-solid fa-arrow-right"></i></a>
+                    </li>
+                    <li><a href="capacity-building.html">Capacity Building <i class="fa-solid fa-arrow-right"></i></a>
+                    </li>
+                    <li><a href="market-access.html">Market Access <i class="fa-solid fa-arrow-right"></i></a></li>
                 </ul>
             </div>
         </aside>
@@ -149,7 +150,8 @@
         <div class="container">
             <div class="footer-top">
                 <div class="footer-brand">
-                    <a href="../index.html" class="logo"><img src="../images/logo.jpg" alt="KB & Associates" style="height: 50px; background: white; padding: 5px; border-radius: 4px;"></a>
+                    <a href="../index.html" class="logo"><img src="../images/logo.jpg" alt="KB & Associates"
+                            style="height: 50px; background: white; padding: 5px; border-radius: 4px;"></a>
                     <p>Empowering economies. Enabling growth.</p>
                 </div>
                 <div class="footer-socials">
