--- a/services/program-design.html
+++ b/services/program-design.html
@@ -35,10 +35,13 @@
                     <li class="dropdown">
                         <a href="../services.html" class="active">Services <i class="fa-solid fa-chevron-down"></i></a>
                         <ul class="dropdown-menu">
-                            <li><a href="pse.html">Private Sector Engagement</a></li>
-                            <li><a href="financial-inclusion.html">Financial Inclusion</a></li>
-                            <li><a href="tvet.html">Workforce Development</a></li>
-                            <li><a href="market-systems.html">Market Systems</a></li>
+                            <li><a href="enterprise-growth.html">Enterprise Growth</a></li>
+                            <li><a href="finance-investment.html">Access to Finance</a></li>
+                            <li><a href="market-access.html">Market Access</a></li>
+                            <li><a href="capacity-building.html">Capacity Building</a></li>
+                            <li><a href="organizational-development.html">Org. Development</a></li>
+                            <li><a href="program-design.html">Program Design</a></li>
+                            <li><a href="vsla-training.html">VSLA Training</a></li>
                         </ul>
                     </li>
                     <li><a href="../insights.html">Insights</a></li>
